steps to clone a repo

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>Learning Git</title>
 </head>
 <body>
-    <h1>Git</h1>
+    <hr>
+    <h1 style="text-align: center;">Gitbash/GitHub</h1>
+    <hr>
     <br>
-    <br>
-    <h1>GitHub</h1>
-    <br>
-    <br>
-    <p>Github and gitbash</p>
+    <p>Steps to create repo using Git</p>
+    <ol>
+        <li>Create a repo on github</li>
+        <li>Clone the repo in the local system $git clone #repo link</li>
+        <li>navigate into the cloned file using OS commands $cd $ls $cd .. $touch</li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
 </body>
 </html>
