steps till git commit and git push

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <h1 style="text-align: center;">Gitbash/GitHub</h1>
     <hr>
     <br>
-    <p>Steps to create repo using Git</p>
+    <p>Steps to create repo using Git -</p>
     <ol>
+        <li>Install git</li>
+        <li>Configure git</li>
+        <li><img src="./images/git config.png" alt="Configuring git" height="350"></li>
         <li>Create a repo on github</li>
         <li>Clone the repo in the local system $git clone #repo link</li>
         <li>navigate into the cloned file using OS commands $cd $ls $cd .. $touch</li>
-        <li></li>
-        <li></li>
+        <li>after accessing the file $code . to open code editor</li>
+        <li>do the coding stuff, now to save this code changes to git we have to use $git add $git commit -m/-am $git push </li>
         <li></li>
     </ol>
 </body>
