--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <li>navigate into the cloned file using OS commands $cd $ls $cd .. $touch</li>
         <li>after accessing the file $code . to open code editor</li>
         <li>do the coding stuff, now to save this code changes to git we have to use $git add $git commit -m/-am $git push </li>
-        <li></li>
+        <li>$git status to know the details of the local repo</li>
+        <li>to add files and folders, we gotta them to $git add like $git add images/ (this selects the whole folder)</li>
+        
     </ol>
 </body>
 </html>
