--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>do the coding stuff, now to save this code changes to git we have to use $git add $git commit -m/-am $git push </li>
         <li>$git status to know the details of the local repo</li>
         <li>to add files and folders, we gotta them to $git add like $git add images/ (this selects the whole folder)</li>
-        
     </ol>
+    <p>I added this line using github</p>
 </body>
 </html>
